# chess-tracker

./: README.md  pyproject.toml
app/: track_game.py
app/utils/: chess_tracker.py  vision_connector.py
chess-tracker/: track_game.py
chess-tracker/utils/: transcribe_board.py
chess-tracker/vision_connector.py/: chess_tracker.py  vision_connector.py
