[project]
name = "chess-tracker"
version = "0.1.0"
description = "A computer vision based live chess digital twin. Enhanced with live analysis, auto time tracking, and game export"
authors = [
    {name = "None, n"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# existing fields...
package-mode = false
